--- a/onlineFoodDeliveryApp/src/main/resources/application.properties
+++ b/onlineFoodDeliveryApp/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8000
 spring.datasource.url=jdbc:mysql://localhost:3306/FoodDeleveryApp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=sony@11
+spring.datasource.password=root
 
 
 #ORM s/w specific properties
